--- a/views/backup/signup.ejs
+++ b/views/backup/signup.ejs
@@ -1,8 +1,8 @@
-<!-- views/login.ejs -->
+<!-- views/signup.ejs -->
 <!doctype html>
 <html>
 <head>
-    <title>Node Authentication</title>
+    <title>Some gayass singup page</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
     <style>
@@ -14,7 +14,7 @@
 
 <div class="col-sm-6 col-sm-offset-3">
 
-    <h1><span class="fa fa-sign-in"></span> Login</h1>
+    <h1><span class="fa fa-sign-in"></span> Signup</h1>
 
     <!-- show any messages that come back with authentication -->
     <% if (message.length > 0) { %>
@@ -22,7 +22,7 @@
     <% } %>
 
     <!-- LOGIN FORM -->
-    <form action="/login" method="post">
+    <form action="/signup" method="post">
         <div class="form-group">
             <label>Username</label>
             <input type="text" class="form-control" name="username">
@@ -31,13 +31,29 @@
             <label>Password</label>
             <input type="password" class="form-control" name="password">
         </div>
+        <div class="form-group">
+            <label>Fistname</label>
+            <input type="text" class="form-control" name="first_name">
+        </div>
+        <div class="form-group">
+            <label>Lastname</label>
+            <input type="text" class="form-control" name="last_name">
+        </div>
+        <div class="form-group">
+            <label>Gender</label>
+            <input type="text" class="form-control" name="gender">
+        </div>
+        <div class="form-group">
+            <label>Age</label>
+            <input type="text" class="form-control" name="age">
+        </div>
 
-        <button type="submit" class="btn btn-primary btn-lg">Login</button>
+        <button type="submit" class="btn btn-primary btn-lg">Signup</button>
     </form>
 
     <hr>
 
-    <p>Need an account? <a href="/signup">Signup</a></p>
+    <p>Already have an account? <a href="/login">Login</a></p>
     <p>Or go <a href="/">home</a>.</p>
 
 </div>
